Fixed styling of H3s so they align properly.

--- a/frontend/src/sass/screen.scss
+++ b/frontend/src/sass/screen.scss
@@ -109,7 +109,13 @@ html, body {
 }
 
 h1 {
-    margin: 0 0 14px 0;
+    margin: 0 0 14px;
+}
+
+h3 {
+    font-size: 24px;
+    line-height: 28px;
+    margin: 0 0 12px;
 }
 
 .container.content {
